--- a/src/components/Skills/skill.module.scss
+++ b/src/components/Skills/skill.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     text-align: center;
     padding: 40px;
-    margin-top: -50px;
+    background-color: #dcdcdc;
 }
   
 .skillIcon {
