--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -20,3 +20,13 @@
     }
 }
 
+@media screen and (max-width: 700px) {
+    .sub_section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem;
+        text-align: center;
+    }
+}
+
