--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -50,3 +50,32 @@
     }
 }
 
+h1 {
+    font-size: 90px;
+    margin: 0;
+}
+
+@media screen and (max-width: 550px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .hero__text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        padding-top: 10rem;
+    }
+
+    h1 {
+        font-size: 50px;
+    }
+
+    .hero__socials {
+        padding-bottom: 20px;
+    }
+}
+
