--- a/src/components/Contact/contact.module.scss
+++ b/src/components/Contact/contact.module.scss
@@ -72,6 +72,10 @@ footer {
   min-height: 37vh;
 }
 
+.homeChevron {
+  transform: scale(2)
+}
+
 @media screen and (max-width: 440px) {
   form {
    max-width: 12rem !important;
