--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     color: white;
     font-size: 40px;
+    margin-top: -100px;
 
     &__area {
         display: flex;
@@ -67,7 +68,7 @@ h1 {
         flex-direction: column;
         align-items: center;
         margin: 0;
-        padding-top: 10rem;
+        padding-top: 8rem;
     }
 
     h1 {
