--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -42,6 +42,10 @@
         text-decoration: none;
     }
 
+    &__button a:hover {
+        color: orange;
+    }
+
     &__socials {
         padding-bottom: 200px;
     }
