--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -13,7 +13,7 @@
     }
       
     &__text {
-        margin-left: 80px;
+        margin-left: 40px;
         margin-bottom: 200px;
     }
 
@@ -48,6 +48,7 @@
 
     &__socials {
         padding-bottom: 200px;
+        padding-right: 15px;
     }
 
     &__social {
