--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -9,13 +9,14 @@
     }
 
     &__div {
-        width: 50%;
+        width: 80%;
+        padding: 20px;
     }
 }
 
 .headshot {
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
     border-radius: 10%;
 
     &__container {
