--- a/src/components/Contact/contact.module.scss
+++ b/src/components/Contact/contact.module.scss
@@ -1,6 +1,7 @@
 footer {
   text-align: center;
-  background-color: #1c1d25;
+  // background-color: #1c1d25;
+  background: linear-gradient(180deg, rgba(220,220,220,1) 0%, rgba(28,29,37,1) 100%);
   color: white;
   padding: 40px;
 } 
