--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -1,5 +1,7 @@
 .hero {
-    background-color: #1c1d25;
+    // background-color: #1c1d25;
+    background: linear-gradient(180deg, rgba(28,29,37,1) 10%, rgba(220,220,220,1) 100%);
+
     height: 100vh;
     color: white;
     font-size: 40px;
