--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    background: linear-gradient(180deg, rgba(220,220,220,1) 0%, rgba(255,255,255,1) 100%);
 
     &__p {
         padding-right: 2em;
