--- a/src/components/Projects/projects.module.scss
+++ b/src/components/Projects/projects.module.scss
@@ -1,3 +1,5 @@
 .projects {
-    margin: 25px 0;
+    padding: 25px 0;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(220,220,220,1) 100%);
+
 }
