--- a/src/components/Hero/hero.module.scss
+++ b/src/components/Hero/hero.module.scss
@@ -16,6 +16,7 @@
       
     &__text {
         margin-left: 40px;
+        animation: fadeUp 2000ms;
     }
 
     &__button {
@@ -49,6 +50,7 @@
 
     &__socials {
         padding-right: 15px;
+        animation: fadeUp 2000ms;
     }
 
     &__social {
@@ -82,6 +84,16 @@ h1 {
 
     .hero__socials {
         padding-bottom: 20px;
+    }
+}
+
+@keyframes fadeUp {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
     }
 }
 
