--- a/src/components/Contact/contact.module.scss
+++ b/src/components/Contact/contact.module.scss
@@ -6,8 +6,11 @@ footer {
   padding: 40px;
 } 
 
+.form:hover {
+  box-shadow: none !important;
+}
+
 .contact {
-  // background-color: black;
 
   &__me {
     padding-bottom: 40px;
