--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -1,7 +1,7 @@
 .sub_section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 20px;
     min-height: 100vh;
     background: linear-gradient(180deg, rgba(220,220,220,1) 0%, rgba(255,255,255,1) 100%);
